--- a/paper/article.tex
+++ b/paper/article.tex
@@ -368,7 +368,7 @@ Based on Transformer and CNN\par}
 
 为了应对文档中复杂表格结构的解析需求，准确获取获取表格中的行列关系、单元格合并、对齐方式等特性，研究者们开始探索表格结构识别方法，表格结构识别指的是从文档图像中自动提取表格的布局信息，并重建其行列关系。一个标准的表格由若干行列组成，当前，表格结构识别的研究方法主要可以分为两类：基于规则的传统方法和基于深度学习的现代方法。基于规则的传统方法通常依赖于图像处理技术，例如边缘检测、投影分析、连通域分析等\cite{b3}。这些方法通过寻找表格的行列线条来判断结构，但在实际应用中，表格往往存在复杂的合并单元格、倾斜、扭曲等形变，这些都使得基于线条的传统方法效果不佳。因此，很多新方法开始尝试不依赖明确的线条，而是通过单元格的定位来重建表格结构。通过定位单元格的起始和结束位置，可以有效避免线条缺失或干扰的影响，从而实现对复杂表格的识别。
 
-近年来，深度学习方法在表格结构识别中的应用取得了突破性进展\cite{b3}。深度学习模型尤其是卷积神经网络（CNN）在图像分割与特征提取方面展现了巨大的优势。对于表格结构的识别，部分基于深度学习的方法依然采用了线条检测来恢复表格的行列结构，例如通过检测图像中的水平和垂直线条来推测行列划分。这类方法通常能够应对大多数标准表格，但对于复杂的表格（如包含合并单元格或倾斜表格），识别效果却并不理想。而另外一些方法则不直接依赖于线条，而是通过单元格区域的检测和定位来判断表格的结构\cite{bcell}。这类方法通常依赖于深度神经网络的端到端训练，直接从图像中学习表格的布局和结构，并能自动进行表格的恢复和数据提取。
+近年来，深度学习方法在表格结构识别中的应用取得了突破性进展\cite{b3}。深度学习模型尤其是卷积神经网络（CNN）在图像分割与特征提取方面展现了巨大的优势。对于表格结构的识别，部分基于深度学习的方法依然采用了线条检测来恢复表格的行列结构，例如通过检测图像中的水平和垂直线条来推测行列划分。这类方法通常能够应对大多数标准表格，但对于复杂的表格（如包含合并单元格或倾斜表格），识别效果却并不理想。而另外一些方法则不直接依赖于线条，而是通过单元格区域的检测和定位来判断表格的结构\cite{b3}。这类方法通常依赖于深度神经网络的端到端训练，直接从图像中学习表格的布局和结构，并能自动进行表格的恢复和数据提取。
 
 如今，表格图像的结构识别依然面临诸多难题。首先，表格的多样性和复杂性对识别提出了严峻挑战。现代文档中的表格形式多样，不仅包括基本的网格结构，还可能包含合并单元格、斜线分隔符、嵌套表格等复杂形式，传统表格识别算法往往难以处理。此外，形变表格的出现进一步增加了识别难度。例如，由于扫描角度的变化或内容被拉伸、倾斜等原因，表格图像可能出现变形，导致传统识别方法无法准确提取结构信息。尤其是表格中的单元格划分和内容对齐，在图像形变或变形后容易发生偏移，这使得表格的检测和重建变得更为复杂。因此，如何高效、准确地识别和重建表格结构，已成为亟待解决的难题。
 
@@ -382,19 +382,19 @@ Based on Transformer and CNN\par}
 
 \subsection{表格区域检测}
 
-作为表格结构识别的前提，表格区域识别的研究目标是从文档中准确定位出表格的所在区域，经过了启发式方法、机器学习方法，再到深度学习方法的逐步演变。早期的表格区域识别主要依赖于启发式或规则方法。这类方法基于视觉特征，例如字符对齐、行间间隔、文本块的布局结构，甚至结合文本信息，通过手工设计的规则来识别表格区域。例如，Pyreddy\cite{m1}等人通过字符对齐、孔和间隔来检测表格；Jahan 等人基于字间距和行高的局部阈值来定位表格区域。这些启发式方法在文档布局统一或格式较简单的情况下效果良好，但在处理复杂的表格布局（例如嵌套表格、多列表格等）或不同布局的文档时，往往需要调整规则，通用性较差。为了提高这类方法的适应性，后续研究提出了更多复杂的规则设计。例如，Nurminen 等人提出了一种通过共同对齐方式来定位文本框的启发式方法，并为每个文本框分配成为表格的概率。这类方法相对更适应格式多变的表格，但其检测精度依旧受限于规则设计的复杂性，尤其在大型文档处理任务中效率较低。
+作为表格结构识别的前提，表格区域识别的研究目标是从文档中准确定位出表格的所在区域，经过了启发式方法、机器学习方法，再到深度学习方法的逐步演变。早期的表格区域识别主要依赖于启发式或规则方法。这类方法基于视觉特征，例如字符对齐、行间间隔、文本块的布局结构，甚至结合文本信息，通过手工设计的规则来识别表格区域。例如，Pyreddy\cite{b1}等人通过字符对齐、孔和间隔来检测表格；Jahan 等人基于字间距和行高的局部阈值来定位表格区域。这些启发式方法在文档布局统一或格式较简单的情况下效果良好，但在处理复杂的表格布局（例如嵌套表格、多列表格等）或不同布局的文档时，往往需要调整规则，通用性较差。为了提高这类方法的适应性，后续研究提出了更多复杂的规则设计。例如，Nurminen 等人提出了一种通过共同对齐方式来定位文本框的启发式方法，并为每个文本框分配成为表格的概率。这类方法相对更适应格式多变的表格，但其检测精度依旧受限于规则设计的复杂性，尤其在大型文档处理任务中效率较低。
 
-随着机器学习技术的快速发展，表格区域识别逐步转向基于机器学习的研究方向。相比于启发式方法，机器学习方法通过数据驱动模型，从训练数据中自动学习特征，大大减少了手工规则的设计。例如，Kieninger\cite{m3}等人使用无监督的聚类方法对表格区域进行识别，通过自动聚类分词来提升表格识别的效果；Cesarini\cite{m4}等人则提出改进的 XY 树结构方法，通过监督学习来检测文档中的表格。Fan\cite{m5}等人在 PDF 文件中使用了监督和非监督方法相结合的策略以提高表格区域检测的稳定性和准确性。此外，Wang\cite{m2}等人将决策树和 SVM 分类器应用于文档的布局和内容特征，以实现更具适应性的表格检测。然而，尽管机器学习方法在模型泛化性上有所提高，其效果仍依赖于特定特征的设计和特定类型数据的训练，在处理文档样式多变的情况下模型的表现仍有局限。
+随着机器学习技术的快速发展，表格区域识别逐步转向基于机器学习的研究方向。相比于启发式方法，机器学习方法通过数据驱动模型，从训练数据中自动学习特征，大大减少了手工规则的设计。例如，Kieninger\cite{b1}等人使用无监督的聚类方法对表格区域进行识别，通过自动聚类分词来提升表格识别的效果；Cesarini\cite{b1}等人则提出改进的 XY 树结构方法，通过监督学习来检测文档中的表格。Fan\cite{b1}等人在 PDF 文件中使用了监督和非监督方法相结合的策略以提高表格区域检测的稳定性和准确性。此外，Wang\cite{b2}等人将决策树和 SVM 分类器应用于文档的布局和内容特征，以实现更具适应性的表格检测。然而，尽管机器学习方法在模型泛化性上有所提高，其效果仍依赖于特定特征的设计和特定类型数据的训练，在处理文档样式多变的情况下模型的表现仍有局限。
 
-近年来，随着深度学习技术的广泛应用，表格区域识别迎来了新的研究范式。深度学习通过构建深层神经网络，能够自动提取特征并学习更为复杂的模式，显著提升了表格区域识别的准确性和适应性。在表格区域识别中，目标检测和语义分割方法是常用的两类技术。目标检测方法将表格视为检测目标，利用卷积神经网络（CNN）识别并标注出表格区域。例如，Hao 等人使用 R-CNN 进行表格检测，Madhav Agarwal\cite{m13}等人则采用 Mask R-CNN 技术提升了表格区域检测的精度。另一方面，语义分割方法将文档图像划分为不同的语义类别（如表格区域、文本区域），实现了对复杂布局的细粒度识别。例如，Yang\cite{m11}等人提出的多尺度全卷积网络在对不同大小和形状的表格区域检测方面具有良好表现。通过深度学习模型的自适应学习特性，表格区域识别的通用性显著提升，能够更好地处理复杂布局的文档，尤其在包含多样化表格格式的大规模文档数据中展现出较强的泛化能力。
+近年来，随着深度学习技术的广泛应用，表格区域识别迎来了新的研究范式。深度学习通过构建深层神经网络，能够自动提取特征并学习更为复杂的模式，显著提升了表格区域识别的准确性和适应性。在表格区域识别中，目标检测和语义分割方法是常用的两类技术。目标检测方法将表格视为检测目标，利用卷积神经网络（CNN）识别并标注出表格区域。例如，Hao 等人使用 R-CNN 进行表格检测，Madhav Agarwal\cite{b2}等人则采用 Mask R-CNN 技术提升了表格区域检测的精度。另一方面，语义分割方法将文档图像划分为不同的语义类别（如表格区域、文本区域），实现了对复杂布局的细粒度识别。例如，Yang\cite{b2}等人提出的多尺度全卷积网络在对不同大小和形状的表格区域检测方面具有良好表现。通过深度学习模型的自适应学习特性，表格区域识别的通用性显著提升，能够更好地处理复杂布局的文档，尤其在包含多样化表格格式的大规模文档数据中展现出较强的泛化能力。
 
 \subsection{表格结构识别}
 
-表格结构识别的研究目标是在定位表格区域的基础上，进一步识别表格内部的结构信息，例如行、列、单元格和表头等结构元素。这一方向的研究经历了启发式方法、机器学习方法，再到深度学习方法的发展历程。在表格结构识别早期，研究者主要依靠启发式规则来分解表格的结构信息。这类方法依赖于文本块的排列、表格线的分布等信息，通过手工设计的规则来实现。例如，Chandran\cite{m24}等人提出通过垂直线和水平线的交叉来检测表格结构；Hassan\cite{m25}等人通过分析文本块的空间特征来定位和分割表格结构。此外，Ruffolo\cite{m26}等人开发了 PDF-trex 系统，通过页面元素的空间特征进行表格结构识别。这类方法在特定的表格格式中具有较高的准确性，但对于复杂表格的识别效果仍不理想，且缺乏足够的灵活性以应对多样化的文档结构。
+表格结构识别的研究目标是在定位表格区域的基础上，进一步识别表格内部的结构信息，例如行、列、单元格和表头等结构元素。这一方向的研究经历了启发式方法、机器学习方法，再到深度学习方法的发展历程。在表格结构识别早期，研究者主要依靠启发式规则来分解表格的结构信息。这类方法依赖于文本块的排列、表格线的分布等信息，通过手工设计的规则来实现。例如，Chandran\cite{b2}等人提出通过垂直线和水平线的交叉来检测表格结构；Hassan\cite{b2}等人通过分析文本块的空间特征来定位和分割表格结构。此外，Ruffolo\cite{b3}等人开发了 PDF-trex 系统，通过页面元素的空间特征进行表格结构识别。这类方法在特定的表格格式中具有较高的准确性，但对于复杂表格的识别效果仍不理想，且缺乏足够的灵活性以应对多样化的文档结构。
 
-机器学习方法的引入为表格结构识别带来了新的可能性。通过学习表格结构的特征分布，机器学习方法能够在一定程度上提升识别的准确性。Kieninger\cite{m3}等人采用了无监督的聚类分词学习方法来识别表格结构；Silva 等人使用隐马尔可夫模型将潜在的表行合并为表结构；Kasar 等人则基于支持向量机（SVM）对文本区域进行分类，从而实现表格结构的识别。这些方法虽然提高了模型的通用性，但依旧面临复杂表格结构识别的瓶颈，例如多层嵌套表格、无边框表格等场景。
+机器学习方法的引入为表格结构识别带来了新的可能性。通过学习表格结构的特征分布，机器学习方法能够在一定程度上提升识别的准确性。Kieninger\cite{b3}等人采用了无监督的聚类分词学习方法来识别表格结构；Silva 等人使用隐马尔可夫模型将潜在的表行合并为表结构；Kasar 等人则基于支持向量机（SVM）对文本区域进行分类，从而实现表格结构的识别。这些方法虽然提高了模型的通用性，但依旧面临复杂表格结构识别的瓶颈，例如多层嵌套表格、无边框表格等场景。
 
-在深度学习方法的推动下，表格结构识别取得了显著的进展。深度学习模型如 CNN、RNN、图神经网络（GNN）等，能够自动学习结构特征，显著提高了表格结构识别的精度和适应性。当前的研究主要分为目标检测、语义分割、图模型和图像到标记序列几种方法。目标检测方法通过将表格结构分解为行、列、单元格等元素来实现结构识别。例如，Siddiqui\cite{m21}等人提出的 DeepTabStR模型和 R.Long\cite{m22}等人提出的 Cycle-CenterNet 模型都在表格结构分解上取得了良好效果。语义分割方法则将表格图像划分为不同的语义类别（如单元格、行、列、标题等），例如 Schreiber\cite{m12}等人提出的 DeepdeSRT 模型和 Paliwal\cite{m17}等人提出的 TableNet 模型。图模型方法进一步将表格结构表示为图形，通过图神经网络（GNN）来进行结构识别，Koci\cite{m7}等人提出的 RAC 模型和 Chi\cite{m8}等人提出的 GraphTSR 模型都是其中的代表。此外，图像到标记序列的方法受到自然语言处理的启发，将表格结构识别视为序列生成任务，通过 Transformer 等模型实现结构的序列化标记，例如Deng Y\cite{m10}等人提出的EDD模型、Ahmed Nassar\cite{m8}等人提出的TableFormer模型以及Hangdi Xing\cite{m23}等人提出的LORE模型；EDD模型过注意力编码器-解码器 (EDD) 架构，能够更好地关注图像中的关键信息，例如表格标题、单元格内容等，从而提高识别精度，TableFormer 网络使用 Transformer 解码器代替了 EDD 网络中的 LSTM 解码器，能够更好地处理长距离依赖关系，并提高识别精度。LORE模型则为表格结构识别提出了另一种范式，将表格结构识别作为一个逻辑位置回归问题，首次将逻辑回归和表格结构识别结合起来。这些方法不仅在表格结构识别的精度上实现了显著提升，同时在处理复杂的、多样化的表格结构时展现出更高的泛化能力。
+在深度学习方法的推动下，表格结构识别取得了显著的进展。深度学习模型如 CNN、RNN、图神经网络（GNN）等，能够自动学习结构特征，显著提高了表格结构识别的精度和适应性。当前的研究主要分为目标检测、语义分割、图模型和图像到标记序列几种方法。目标检测方法通过将表格结构分解为行、列、单元格等元素来实现结构识别。例如，Siddiqui\cite{b3}等人提出的 DeepTabStR模型和 R.Long\cite{b3}等人提出的 Cycle-CenterNet 模型都在表格结构分解上取得了良好效果。语义分割方法则将表格图像划分为不同的语义类别（如单元格、行、列、标题等），例如 Schreiber\cite{b3}等人提出的 DeepdeSRT 模型和 Paliwal\cite{b3}等人提出的 TableNet 模型。图模型方法进一步将表格结构表示为图形，通过图神经网络（GNN）来进行结构识别，Koci\cite{b3}等人提出的 RAC 模型和 Chi\cite{b3}等人提出的 GraphTSR 模型都是其中的代表。此外，图像到标记序列的方法受到自然语言处理的启发，将表格结构识别视为序列生成任务，通过 Transformer 等模型实现结构的序列化标记，例如Deng Y\cite{b3}等人提出的EDD模型、Ahmed Nassar\cite{b3}等人提出的TableFormer模型以及Hangdi Xing\cite{b3}等人提出的LORE模型；EDD模型过注意力编码器-解码器 (EDD) 架构，能够更好地关注图像中的关键信息，例如表格标题、单元格内容等，从而提高识别精度，TableFormer 网络使用 Transformer 解码器代替了 EDD 网络中的 LSTM 解码器，能够更好地处理长距离依赖关系，并提高识别精度。LORE模型则为表格结构识别提出了另一种范式，将表格结构识别作为一个逻辑位置回归问题，首次将逻辑回归和表格结构识别结合起来。这些方法不仅在表格结构识别的精度上实现了显著提升，同时在处理复杂的、多样化的表格结构时展现出更高的泛化能力。
 
 总之，表格结构识别的研究发展反映了表格识别领域从简单规则到复杂模型的进步。虽然启发式和机器学习方法仍在特定场景下发挥作用，但深度学习方法因其自适应的特性，已经成为该领域的主流方向。深度学习模型在处理复杂表格和多样化文档布局时具有显著优势，这不仅提高了表格结构识别的准确性，也拓展了其在实际应用中的适用性。
 
@@ -402,11 +402,11 @@ Based on Transformer and CNN\par}
 
 近年来，表格识别技术的研究逐步从单一的表格区域检测或结构识别任务向更为集成化的方向发展，端到端方法和以数据为中心的方法应运而生。这些方法在表格区域检测和结构识别的基础上，将两者合并为一个整体，通过单一模型实现端到端处理，从而进一步提高了识别效率和模型的适应性。在传统方法中，表格区域检测和结构识别通常作为两个独立步骤分别进行，彼此之间的交互有限。而端到端方法通过一体化设计，能够在减少手工干预的情况下自动完成表格的全面识别，显著提升了模型的效率与准确性。
 
-端到端方法主要通过深度学习模型将表格区域检测和结构识别整合在一个流程内，实现从表格定位到结构解析的无缝衔接。这类方法的早期代表包括Sebastian Schreiber\cite{m12}等人提出的DeepDeSRT，它使用 Faster R-CNN 直接对表格进行检测和结构解析，不依赖启发式规则或元数据。后续的Madhav Agarwal\cite{m13}等人提出的CDeC-Net 则在 Mask R-CNN 的基础上增加了多级扩展，并通过可变形卷积适应不同尺度的表格布局，提升了高 IoU 阈值下的检测精度。此外，W Xue\cite{m14}等人提出的ReS2TIM 模型通过构建表格单元间的关系图并进行结构化推断，实现了从表格图像到结构表示的转换；而C Tensmeyer\cite{m15}等人提出的SPLERGE模型则通过扩张卷积建立表格网格布局，进而识别跨行或跨列的复杂单元格，进一步拓展了端到端方法对复杂表格的适应性。
+端到端方法主要通过深度学习模型将表格区域检测和结构识别整合在一个流程内，实现从表格定位到结构解析的无缝衔接。这类方法的早期代表包括Sebastian Schreiber\cite{b2}等人提出的DeepDeSRT，它使用 Faster R-CNN 直接对表格进行检测和结构解析，不依赖启发式规则或元数据。后续的Madhav Agarwal\cite{b2}等人提出的CDeC-Net 则在 Mask R-CNN 的基础上增加了多级扩展，并通过可变形卷积适应不同尺度的表格布局，提升了高 IoU 阈值下的检测精度。此外，W Xue\cite{b2}等人提出的ReS2TIM 模型通过构建表格单元间的关系图并进行结构化推断，实现了从表格图像到结构表示的转换；而C Tensmeyer\cite{b2}等人提出的SPLERGE模型则通过扩张卷积建立表格网格布局，进而识别跨行或跨列的复杂单元格，进一步拓展了端到端方法对复杂表格的适应性。
 
-在处理多样化表格格式方面，Y Deng\cite{m16}等人提出的TABLE2LATEX、SS Paliwal\cite{m17}等人提出的TableNet 和 Devashish Prasad\cite{m18}等人提出的CascadeTabNet 的一系列端到端模型表现出了出色的性能。TABLE2LATEX 通过将表格图像与 LaTeX 源代码配对，利用注意力编码器-解码器模型直接生成 LaTeX 格式的结构化输出，这种设计有效地解决了表格识别到格式化表示的转化问题。TableNet 在训练过程中增加了空间语义的关联，使得表格检测和结构识别两项任务之间的依赖关系得到了充分利用，进一步提升了识别精度。CascadeTabNet 则通过单一卷积网络实现区域检测和结构识别的同时处理，简化了整体流程，适合大规模文档的批量处理。
+在处理多样化表格格式方面，Y Deng\cite{b2}等人提出的TABLE2LATEX、SS Paliwal\cite{b2}等人提出的TableNet 和 Devashish Prasad\cite{b2}等人提出的CascadeTabNet 的一系列端到端模型表现出了出色的性能。TABLE2LATEX 通过将表格图像与 LaTeX 源代码配对，利用注意力编码器-解码器模型直接生成 LaTeX 格式的结构化输出，这种设计有效地解决了表格识别到格式化表示的转化问题。TableNet 在训练过程中增加了空间语义的关联，使得表格检测和结构识别两项任务之间的依赖关系得到了充分利用，进一步提升了识别精度。CascadeTabNet 则通过单一卷积网络实现区域检测和结构识别的同时处理，简化了整体流程，适合大规模文档的批量处理。
 
-新型端到端模型如Danish Nazir\cite{m19}等人提出的HybridTabNet、Hashmi K.A\cite{m20}等人提出的CasTabDetectoRS 和Wenyuan Xue\cite{m9}等人提出的TGRNet都在表格识别的精度和效率之间进行了平衡。HybridTabNet 采用 ResNeXt-101 主干结合混合任务级联 (HTC) 方法，实现高精度的表格区域检测和结构解析；CasTabDetectoRS 使用轻量级的 ResNet-50 网络，不依赖预处理和后处理即可获得较高的识别效果；TGRNet 将表格结构识别重新定义为表格图重构任务，通过单元格检测和逻辑位置预测的双分支设计，有效解决了复杂表格的解析问题。此外，TSR-dsaw 和 WSTabNet 等模型进一步探讨了端到端识别和输出格式化的结合，通过直接生成 HTML 或 LaTeX 格式的结构化数据，实现了从图像到结构表示的端到端训练。Multi-Task 模型则通过共享的编码器和多个解码器，分别处理表格的结构识别、单元格检测和内容识别等子任务，在多任务学习中展现了独特优势。总体来看，端到端方法为表格识别提供了集成化的解决方案，使得表格区域检测和结构识别可以在统一框架下完成，从而极大提升了识别效率和准确性。
+新型端到端模型如Danish Nazir\cite{b2}等人提出的HybridTabNet、Hashmi K.A\cite{b2}等人提出的CasTabDetectoRS 和Wenyuan Xue\cite{b2}等人提出的TGRNet都在表格识别的精度和效率之间进行了平衡。HybridTabNet 采用 ResNeXt-101 主干结合混合任务级联 (HTC) 方法，实现高精度的表格区域检测和结构解析；CasTabDetectoRS 使用轻量级的 ResNet-50 网络，不依赖预处理和后处理即可获得较高的识别效果；TGRNet 将表格结构识别重新定义为表格图重构任务，通过单元格检测和逻辑位置预测的双分支设计，有效解决了复杂表格的解析问题。此外，TSR-dsaw 和 WSTabNet 等模型进一步探讨了端到端识别和输出格式化的结合，通过直接生成 HTML 或 LaTeX 格式的结构化数据，实现了从图像到结构表示的端到端训练。Multi-Task 模型则通过共享的编码器和多个解码器，分别处理表格的结构识别、单元格检测和内容识别等子任务，在多任务学习中展现了独特优势。总体来看，端到端方法为表格识别提供了集成化的解决方案，使得表格区域检测和结构识别可以在统一框架下完成，从而极大提升了识别效率和准确性。
 
 除了模型架构的创新，以数据为中心的方法也为表格识别的研究提供了新的思路。这类方法强调数据质量和标注一致性的重要性，认为高质量的训练数据对模型的性能具有显著影响。以数据为中心的方法通过提升数据的数量和多样性，改进标注质量和一致性，从而增强了模型的泛化能力。例如，通过数据增强技术生成不同类型的表格样本，有助于模型适应各种表格格式和布局；数据的预处理和后处理则能够标准化模型的输入和输出，提高模型的稳定性和一致性。此外，基准对齐确保了数据标注的标准性，使得模型评估结果更具参考价值和可靠性。
 
