--- a/paper/article.tex
+++ b/paper/article.tex
@@ -1,4 +1,4 @@
-\documentclass[UTF8,12pt, AutoFakeBold,fontset = founder]{ctexart}
+\documentclass[number, UTF8,12pt, AutoFakeBold,fontset = founder]{ctexart}
 % fontset = founder 设置更加丰富的字体
 \usepackage{geometry,amsmath,amsthm,amssymb,amsfonts}
 \usepackage{graphicx}
@@ -66,8 +66,8 @@
 %   [\vspace{0pt}] % 段后  0 磅
 
 
-  \CTEXsetup[name={第,章},number={{\arabic{section}}}]{section}
-  \sectionfont{\centering} % 居中显示标题
+\CTEXsetup[name={第,章},number={{\arabic{section}}}]{section}
+\sectionfont{\centering} % 居中显示标题
 
 % 使用 titlesec 设置章节与标题的分隔符
 % 自定义带编号章节格式：第x章 标题（居中）
@@ -95,7 +95,9 @@
   {} % 标题内容前的附加内容
 %   [\vspace{0.5em}] % 标题后的垂直间距
 
-\usepackage[numbers,sort&compress]{natbib}
+% \usepackage{cite}
+% \usepackage{../ref/gbt7714}
+\bibliographystyle{ref/gbt7714-numerical}
 
 % \CTEXsetup[name={\heiti \fontsize{14.4pt}{21pt}\selectfont},number={}]{section}
 
@@ -144,6 +146,7 @@
 \captionsetup{labelformat=default,labelsep=space} %去除图注、表注的冒号
 % 设置图像图注为中文
 \captionsetup[figure]{name=图}
+\graphicspath{{../images/}} % 设置图片路径
 % 设置表格图注为中文
 \captionsetup[table]{name=表}
 
@@ -174,6 +177,7 @@
 % \author[1]{Long Liu}
 % \affil{School of Information Engineering}
 % \date{}
+\usepackage{subfiles} % 多文件编译包
 
 \begin{document}
 % \begin{sloppypar}
@@ -358,23 +362,7 @@ Based on Transformer and CNN\par}
 \pagenumbering{arabic} % 切换到阿拉伯数字作为正文页码
 \setcounter{page}{1} % 重置页码计数器
 % 通常来说，你在下面章节填充内容即可！
-\section{选题依据}
-
-\subsection{研究背景}
-
-在信息化的时代，随着扫描、拍照等手段的普及以及大数据和人工智能的推动，纸质文档逐渐被电子文档取代。传统的纸质文档多依赖人工输入和手动整理，需要消耗大量人力资源与时间成本，而电子文档则得益于计算机技术的发展，能自动存储、编辑及检索，极大提升了信息处理之效率与准确性。
-
-表格中不仅包含文字信息，还包含复杂的行列关系、合并单元格以及多种对齐方式等，这些因素使得光学字符识别（OCR）\cite{b1, b2}技术在提取表格数据时面临不小的挑战。比如在一些复杂表格中，虽然OCR能够识别出单元格中的文本内容，但难以准确推断出单元格之间的层级关系和从属结构，这在一定程度上限制了其在表格数据提取中的应用。
-
-为了应对文档中复杂表格结构的解析需求，准确获取获取表格中的行列关系、单元格合并、对齐方式等特性，研究者们开始探索表格结构识别方法，表格结构识别指的是从文档图像中自动提取表格的布局信息，并重建其行列关系。一个标准的表格由若干行列组成，当前，表格结构识别的研究方法主要可以分为两类：基于规则的传统方法和基于深度学习的现代方法。基于规则的传统方法通常依赖于图像处理技术，例如边缘检测、投影分析、连通域分析等\cite{b3}。这些方法通过寻找表格的行列线条来判断结构，但在实际应用中，表格往往存在复杂的合并单元格、倾斜、扭曲等形变，这些都使得基于线条的传统方法效果不佳。因此，很多新方法开始尝试不依赖明确的线条，而是通过单元格的定位来重建表格结构。通过定位单元格的起始和结束位置，可以有效避免线条缺失或干扰的影响，从而实现对复杂表格的识别。
-
-近年来，深度学习方法在表格结构识别中的应用取得了突破性进展\cite{b3}。深度学习模型尤其是卷积神经网络（CNN）在图像分割与特征提取方面展现了巨大的优势。对于表格结构的识别，部分基于深度学习的方法依然采用了线条检测来恢复表格的行列结构，例如通过检测图像中的水平和垂直线条来推测行列划分。这类方法通常能够应对大多数标准表格，但对于复杂的表格（如包含合并单元格或倾斜表格），识别效果却并不理想。而另外一些方法则不直接依赖于线条，而是通过单元格区域的检测和定位来判断表格的结构\cite{b3}。这类方法通常依赖于深度神经网络的端到端训练，直接从图像中学习表格的布局和结构，并能自动进行表格的恢复和数据提取。
-
-如今，表格图像的结构识别依然面临诸多难题。首先，表格的多样性和复杂性对识别提出了严峻挑战。现代文档中的表格形式多样，不仅包括基本的网格结构，还可能包含合并单元格、斜线分隔符、嵌套表格等复杂形式，传统表格识别算法往往难以处理。此外，形变表格的出现进一步增加了识别难度。例如，由于扫描角度的变化或内容被拉伸、倾斜等原因，表格图像可能出现变形，导致传统识别方法无法准确提取结构信息。尤其是表格中的单元格划分和内容对齐，在图像形变或变形后容易发生偏移，这使得表格的检测和重建变得更为复杂。因此，如何高效、准确地识别和重建表格结构，已成为亟待解决的难题。
-
-\subsection{研究意义与目的}
-
-在文档存储数据的方式中，表格占据着举足轻重的地位，尤其是在财务报表、学术论文、统计分析等领域，它们不仅是信息传递的重要载体，也是数据分析的基础。因此，从图像文档中自动提取表格信息并重建其结构的过程，逐渐成为计算机视觉和图像处理领域备受关注的研究方向。这项工作的核心挑战在于如何高效且准确地从复杂的图像背景中分离出表格区域，识别表格内部的行列布局，并进一步精准提取每个单元格内的数据内容。这不仅有助于提升信息处理的自动化水平，减少人工干预所带来的误差，同时也为后续的数据分析提供了更加可靠的支持。此外，随着移动设备和数字化办公环境的普及，能够快速准确地处理各种形式存在的表格图像，对于促进跨平台的信息共享与交流也具有重要意义。
+\subfile{sections/section1-Introduction}
 
 \section{国内外研究现状}
 
@@ -435,7 +423,7 @@ Based on Transformer and CNN\par}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\textwidth]{../images/point.png}
+    \includegraphics[width=0.9\textwidth]{point.png}
     \caption{关键点检测与图像分割}
     \label{fig:p}
 \end{figure}
@@ -533,24 +521,24 @@ Based on Transformer and CNN\par}
 
 % 参考文献部分
 \clearpage
-{
 \phantomsection % 手动插入锚点
 \section*{参考文献}
 \addcontentsline{toc}{section}{参考文献}
-\vspace{-3\baselineskip} % 减少段后距离
-% 设置参考文献的格式
-\fontsize{10.5pt}{12pt}\selectfont  % 设置五号字体（10.5pt）
-\renewcommand{\baselinestretch}{1.0}  % 单倍行距
-\setlength{\bibsep}{0pt} % 设置段前段后间距为0磅
-\begin{thebibliography}{00}
-    % ocr + 传统
-    \bibitem{b1} Shi B, Bai X (2020). A survey on optical character recognition: Techniques, challenges, and applications[J]. International Journal of Computer Science, 28(6), 221-234. 
-    % OCR技术+ 深度学习
-    \bibitem{b2} Subramani N, Matton A, Greaves M, and Lam A (2020). A Survey of Deep Learning Approaches for OCR and Document Understanding[R/OL]. ArXiv, abs/2011.13534.
-    % 传统算法 + 表格结构识别
-    \bibitem{b3}司明. 表格识别的研究[D]. 西安科技大学, 2009.
-\end{thebibliography}
-}
+% \vspace{-3\baselineskip} % 减少段后距离
+% % 设置参考文献的格式
+% \fontsize{10.5pt}{12pt}\selectfont  % 设置五号字体（10.5pt）
+% \renewcommand{\baselinestretch}{1.0}  % 单倍行距
+% \setlength{\bibsep}{0pt} % 设置段前段后间距为0磅
+% \begin{thebibliography}{00}
+%     % ocr + 传统
+%     \bibitem{b1} Shi B, Bai X (2020). A survey on optical character recognition: Techniques, challenges, and applications[J]. International Journal of Computer Science, 28(6), 221-234. 
+%     % OCR技术+ 深度学习
+%     \bibitem{b2} Subramani N, Matton A, Greaves M, and Lam A (2020). A Survey of Deep Learning Approaches for OCR and Document Understanding[R/OL]. ArXiv, abs/2011.13534.
+%     % 传统算法 + 表格结构识别
+%     \bibitem{b3}司明. 表格识别的研究[D]. 西安科技大学, 2009.
+% \end{thebibliography}
+% \bibliographystyle{IEEEtran} % 参考文献排版风格
+\bibliography{ref/ref}
 
 \clearpage
 \phantomsection % 手动插入锚点
