modify .gitignore file

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -1,4 +1,4 @@
-\documentclass[number, UTF8,12pt, AutoFakeBold,fontset = founder]{ctexart}
+\documentclass[UTF8,12pt, AutoFakeBold,fontset = founder]{ctexart}
 % fontset = founder 设置更加丰富的字体
 \usepackage{geometry,amsmath,amsthm,amssymb,amsfonts}
 \usepackage{graphicx}
