--- a/paper/article.tex
+++ b/paper/article.tex
@@ -77,7 +77,7 @@
 \titleformat{name=\section,numberless}[block]{\centering\bfseries\large}{}{0pt}{}
 
 % 禁用默认标题
-\renewcommand{\refname}
+% \renewcommand{\refname}
 
 % 设置 subsection 格式
 \titleformat{\subsection}
@@ -94,10 +94,6 @@
   {1em} % 编号与标题之间的水平间距
   {} % 标题内容前的附加内容
 %   [\vspace{0.5em}] % 标题后的垂直间距
-
-% \usepackage{cite}
-% \usepackage{../ref/gbt7714}
-\bibliographystyle{ref/gbt7714-numerical}
 
 % \CTEXsetup[name={\heiti \fontsize{14.4pt}{21pt}\selectfont},number={}]{section}
 
@@ -178,6 +174,9 @@
 % \affil{School of Information Engineering}
 % \date{}
 \usepackage{subfiles} % 多文件编译包
+\usepackage{cite}
+
+\bibliographystyle{ref/gbt7714-numerical}
 
 \begin{document}
 % \begin{sloppypar}
@@ -186,165 +185,11 @@
 \def\@cite#1#2{\textsuperscript{[{#1\if@tempswa , #2\fi}]}}
 \setlist[enumerate]{itemsep=0pt, parsep=0pt} % 设置enumerate环境的垂直间距
 
-\makeatletter 
-{
-    \thispagestyle{empty}\
-    \vspace*{10.5pt}\\
-    \noindent{
-        \zihao{5}{\heiti 中图分类号:TP391}
-    }\\
-    \noindent{
-        \zihao{5}{\heiti 盲审编号：10406\_081203\_2004081200109\_LW}
-    }
-    \vspace{42pt}
-    \begin{center}
-        \includegraphics[height=2.07cm, width=10.03cm]{../images/school.png}
-        \vspace*{1\baselineskip}\\
-        {\fontsize{36}{43.2}\selectfont{\huawenxingkai 硕\ 士\ 学\ 位\ 论\ 文}}\\
-        \vspace*{4.6\baselineskip}
-        {\fontsize{24}{28.8}\selectfont\heiti 题\ \ \ 目}
-        \vspace{33.6pt}\\
-        {\fontsize{24}{28.8} \underline{\heiti{基于图像分割的细粒度变形表格结构识别}}}
-    \end{center}
-    \vspace{33.6pt}
-    \begin{center}
-    \begin{table}[!htbp]
-    \centering
-        \begin{tabular}{c @{\hspace{1cm}} c rc}
-            \Large \makebox[3cm][s]{\zihao{4}\selectfont{\heiti 学科、专业}}&{\makebox[7cm][c]{\zihao{4}\selectfont{\heiti 计算机科学技术}}} \\
-            \cline{2-2} % 仅第二列下方显示横线
-            \\[1pt]
-            \Large \makebox[3cm][s]{\zihao{4}\selectfont{\heiti 专业代码}}&{\makebox[7cm][c]{\zihao{4}\selectfont{\heiti xxxxxx}}} \\
-            \cline{2-2} % 仅第二列下方显示横线
-            \\[1pt]
-            \Large \makebox[3cm][s]{\zihao{4}\selectfont{\heiti 学位类型}}&{\makebox[7cm][c]{\zihao{4}\selectfont{\heiti 学术学位硕士}}} \\
-            \cline{2-2} % 仅第二列下方显示横线
-            \\[1pt]
-        \end{tabular}
-    \end{table} 
-    \end{center}
+\subfile{sections/cover}
+
+\subfile{sections/abstract}
 
 
-    \newpage    
-    \thispagestyle{empty}\
-    \vspace*{7pt}\\
-    {\zihao{5}{\songti \raggedleft 学校代码：10001 \par}}
-    \noindent{
-        \zihao{5}{\songti 分类号:TP391 \hfill 学号：2004081200109 \par}
-    }
-    \vspace{50pt}
-    \begin{center}
-        {\zihao{3}\selectfont\songti \textbf{南昌航空大学}}\\
-        \vspace{3pt}
-        {\zihao{3}\selectfont\songti \textbf{硕\ 士\ 学\ 位\ 论\ 文}}\\
-        \vspace{3pt}
-        {\zihao{4}\selectfont{\songti (学术学位研究生)}}\\
-    \end{center}
-    \vspace{66pt}
-    \begin{center}
-        {\zihao{2}{\songti \textbf{基于图像分割的细粒度变形表格结构识别}}}
-    \end{center}
-    \vspace{31.5pt}
-    \begin{center}
-    \begin{table}[!htbp]
-    \centering
-        \begin{tabular}{c @{\hspace{1cm}} c rc}
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 硕士研究生:}}&{\makebox[4cm][l]{\zihao{3}\selectfont { }}} \\
-            \\[1pt]
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 导师:}}&{\makebox[4cm][l]{\zihao{3}\selectfont{ }}} \\
-            \\[1pt]
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 申请学位级别:}}& {\makebox[4cm][l]{\zihao{3}\selectfont{ }}} \\
-            \\[1pt]
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 学科、专业:}}&{\makebox[4cm][l]{\zihao{3}\selectfont {计算机科学与技术}}} \\
-            \\[1pt]
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 所在单位:}}& {\makebox[4cm][l]{\zihao{3}\selectfont { }}} \\
-            \\[1pt]
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 答辩日期:}}& {\makebox[4cm][l]{\zihao{3}\selectfont { }}} \\
-            \\[1pt]
-            \Large \makebox[3.5cm][s]{\zihao{3}\selectfont \textbf{\songti 授予学位单位:}}& {\makebox[4cm][l]{\zihao{3}\selectfont { }}}
-        \end{tabular}
-    \end{table} 
-    \end{center}
-\restoregeometry %恢复之前的页面格式
-}
-
-{
-\thispagestyle{empty}
-\centering
-\vspace*{12pt} % 顶部留白
-{\LARGE\bfseries Research \\[0.3em]
-Based on Transformer and CNN\par}
-
-\vspace{24pt} % 标题与副标题间距
-
-% 副标题部分
-{\large A Dissertation\par}
-\vspace{12pt}
-{\large Submitted for the Degree of Master\par}
-\vspace{12pt}
-{\large On the Computer Science and Technology\par}
-
-\vspace{48pt} % 中间留白
-
-% 作者信息
-{\Large\bfseries By Long Liu\par}
-\vspace{12pt}
-{\large Under the Supervision of\par}
-\vspace{12pt}
-{\Large\bfseries A.Prof. Cihui Yang\par}
-
-% \vfill % 自动填充剩余空间
-\vspace{58.5pt}
-
-% 底部信息
-{\large School of Information Engineering\par}
-\vspace{12pt}
-{\large Nanchang Hangkong University, Nanchang, China\par}
-\vspace{12pt}
-{\large May, 2026\par}
-}
-
-{
-
-    \newpage
-    \pagestyle{empty} % 设置页面样式为 plain，即只有页码，没有页眉
-    \thispagestyle{plain} % 当前页也使用 plain 样式，即只有页码，没有页眉
-    \pagenumbering{Roman} % 使用大写罗马数字作为页码格式
-    % \rhead{摘要}
-    \begin{center}
-        \phantomsection % 手动插入锚点
-        \section*{{摘要}}
-        \addcontentsline{toc}{section}{摘要} % 将“摘要”添加到目录
-    \end{center}
-    
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    \newline %另起一段
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    \newline
-    \medskip\textbf{\songti 关键词：}XXX;XXX;XXX
-
-    \newpage
-    \thispagestyle{plain}
-    % \rhead{Abstract}
-    \begin{center}
-        \phantomsection % 手动插入锚点
-        \section*{{Abstract}}
-        \addcontentsline{toc}{section}{Abstract} % 将“Abstract”添加到目录
-    \end{center}
-
-    
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    \newline
-    \medskip\textbf{Keywords:}XXX;XXX;XXX
-}
-
-\makeatother
 
 \pagestyle{fancy} % 从这个地方一下全遵循自定义页眉
 \newpage
@@ -364,44 +209,6 @@ Based on Transformer and CNN\par}
 % 通常来说，你在下面章节填充内容即可！
 \subfile{sections/section1-Introduction}
 
-\section{国内外研究现状}
-
-由于表格的形式多样且版面不固定，且常常受到印章、褶皱等因素的影响，表格识别仍然面临着许多挑战。为了解决这些问题，国内外的研究机构和学者进行了大量的研究，探索了多种方法。为了更好地总结前人工作的成果，并为后续研究提供参考，本节将从表格区域检测、表格结构识别和端到端表格识别技术三个方面介绍该研究方向的发展历程和最新研究进展，旨在全面展示该领域的技术演进和当前的研究趋势。
-
-\subsection{表格区域检测}
-
-作为表格结构识别的前提，表格区域识别的研究目标是从文档中准确定位出表格的所在区域，经过了启发式方法、机器学习方法，再到深度学习方法的逐步演变。早期的表格区域识别主要依赖于启发式或规则方法。这类方法基于视觉特征，例如字符对齐、行间间隔、文本块的布局结构，甚至结合文本信息，通过手工设计的规则来识别表格区域。例如，Pyreddy\cite{b1}等人通过字符对齐、孔和间隔来检测表格；Jahan 等人基于字间距和行高的局部阈值来定位表格区域。这些启发式方法在文档布局统一或格式较简单的情况下效果良好，但在处理复杂的表格布局（例如嵌套表格、多列表格等）或不同布局的文档时，往往需要调整规则，通用性较差。为了提高这类方法的适应性，后续研究提出了更多复杂的规则设计。例如，Nurminen 等人提出了一种通过共同对齐方式来定位文本框的启发式方法，并为每个文本框分配成为表格的概率。这类方法相对更适应格式多变的表格，但其检测精度依旧受限于规则设计的复杂性，尤其在大型文档处理任务中效率较低。
-
-随着机器学习技术的快速发展，表格区域识别逐步转向基于机器学习的研究方向。相比于启发式方法，机器学习方法通过数据驱动模型，从训练数据中自动学习特征，大大减少了手工规则的设计。例如，Kieninger\cite{b1}等人使用无监督的聚类方法对表格区域进行识别，通过自动聚类分词来提升表格识别的效果；Cesarini\cite{b1}等人则提出改进的 XY 树结构方法，通过监督学习来检测文档中的表格。Fan\cite{b1}等人在 PDF 文件中使用了监督和非监督方法相结合的策略以提高表格区域检测的稳定性和准确性。此外，Wang\cite{b2}等人将决策树和 SVM 分类器应用于文档的布局和内容特征，以实现更具适应性的表格检测。然而，尽管机器学习方法在模型泛化性上有所提高，其效果仍依赖于特定特征的设计和特定类型数据的训练，在处理文档样式多变的情况下模型的表现仍有局限。
-
-近年来，随着深度学习技术的广泛应用，表格区域识别迎来了新的研究范式。深度学习通过构建深层神经网络，能够自动提取特征并学习更为复杂的模式，显著提升了表格区域识别的准确性和适应性。在表格区域识别中，目标检测和语义分割方法是常用的两类技术。目标检测方法将表格视为检测目标，利用卷积神经网络（CNN）识别并标注出表格区域。例如，Hao 等人使用 R-CNN 进行表格检测，Madhav Agarwal\cite{b2}等人则采用 Mask R-CNN 技术提升了表格区域检测的精度。另一方面，语义分割方法将文档图像划分为不同的语义类别（如表格区域、文本区域），实现了对复杂布局的细粒度识别。例如，Yang\cite{b2}等人提出的多尺度全卷积网络在对不同大小和形状的表格区域检测方面具有良好表现。通过深度学习模型的自适应学习特性，表格区域识别的通用性显著提升，能够更好地处理复杂布局的文档，尤其在包含多样化表格格式的大规模文档数据中展现出较强的泛化能力。
-
-\subsection{表格结构识别}
-
-表格结构识别的研究目标是在定位表格区域的基础上，进一步识别表格内部的结构信息，例如行、列、单元格和表头等结构元素。这一方向的研究经历了启发式方法、机器学习方法，再到深度学习方法的发展历程。在表格结构识别早期，研究者主要依靠启发式规则来分解表格的结构信息。这类方法依赖于文本块的排列、表格线的分布等信息，通过手工设计的规则来实现。例如，Chandran\cite{b2}等人提出通过垂直线和水平线的交叉来检测表格结构；Hassan\cite{b2}等人通过分析文本块的空间特征来定位和分割表格结构。此外，Ruffolo\cite{b3}等人开发了 PDF-trex 系统，通过页面元素的空间特征进行表格结构识别。这类方法在特定的表格格式中具有较高的准确性，但对于复杂表格的识别效果仍不理想，且缺乏足够的灵活性以应对多样化的文档结构。
-
-机器学习方法的引入为表格结构识别带来了新的可能性。通过学习表格结构的特征分布，机器学习方法能够在一定程度上提升识别的准确性。Kieninger\cite{b3}等人采用了无监督的聚类分词学习方法来识别表格结构；Silva 等人使用隐马尔可夫模型将潜在的表行合并为表结构；Kasar 等人则基于支持向量机（SVM）对文本区域进行分类，从而实现表格结构的识别。这些方法虽然提高了模型的通用性，但依旧面临复杂表格结构识别的瓶颈，例如多层嵌套表格、无边框表格等场景。
-
-在深度学习方法的推动下，表格结构识别取得了显著的进展。深度学习模型如 CNN、RNN、图神经网络（GNN）等，能够自动学习结构特征，显著提高了表格结构识别的精度和适应性。当前的研究主要分为目标检测、语义分割、图模型和图像到标记序列几种方法。目标检测方法通过将表格结构分解为行、列、单元格等元素来实现结构识别。例如，Siddiqui\cite{b3}等人提出的 DeepTabStR模型和 R.Long\cite{b3}等人提出的 Cycle-CenterNet 模型都在表格结构分解上取得了良好效果。语义分割方法则将表格图像划分为不同的语义类别（如单元格、行、列、标题等），例如 Schreiber\cite{b3}等人提出的 DeepdeSRT 模型和 Paliwal\cite{b3}等人提出的 TableNet 模型。图模型方法进一步将表格结构表示为图形，通过图神经网络（GNN）来进行结构识别，Koci\cite{b3}等人提出的 RAC 模型和 Chi\cite{b3}等人提出的 GraphTSR 模型都是其中的代表。此外，图像到标记序列的方法受到自然语言处理的启发，将表格结构识别视为序列生成任务，通过 Transformer 等模型实现结构的序列化标记，例如Deng Y\cite{b3}等人提出的EDD模型、Ahmed Nassar\cite{b3}等人提出的TableFormer模型以及Hangdi Xing\cite{b3}等人提出的LORE模型；EDD模型过注意力编码器-解码器 (EDD) 架构，能够更好地关注图像中的关键信息，例如表格标题、单元格内容等，从而提高识别精度，TableFormer 网络使用 Transformer 解码器代替了 EDD 网络中的 LSTM 解码器，能够更好地处理长距离依赖关系，并提高识别精度。LORE模型则为表格结构识别提出了另一种范式，将表格结构识别作为一个逻辑位置回归问题，首次将逻辑回归和表格结构识别结合起来。这些方法不仅在表格结构识别的精度上实现了显著提升，同时在处理复杂的、多样化的表格结构时展现出更高的泛化能力。
-
-总之，表格结构识别的研究发展反映了表格识别领域从简单规则到复杂模型的进步。虽然启发式和机器学习方法仍在特定场景下发挥作用，但深度学习方法因其自适应的特性，已经成为该领域的主流方向。深度学习模型在处理复杂表格和多样化文档布局时具有显著优势，这不仅提高了表格结构识别的准确性，也拓展了其在实际应用中的适用性。
-
-\subsection{端到端的表格识别方法}
-
-近年来，表格识别技术的研究逐步从单一的表格区域检测或结构识别任务向更为集成化的方向发展，端到端方法和以数据为中心的方法应运而生。这些方法在表格区域检测和结构识别的基础上，将两者合并为一个整体，通过单一模型实现端到端处理，从而进一步提高了识别效率和模型的适应性。在传统方法中，表格区域检测和结构识别通常作为两个独立步骤分别进行，彼此之间的交互有限。而端到端方法通过一体化设计，能够在减少手工干预的情况下自动完成表格的全面识别，显著提升了模型的效率与准确性。
-
-端到端方法主要通过深度学习模型将表格区域检测和结构识别整合在一个流程内，实现从表格定位到结构解析的无缝衔接。这类方法的早期代表包括Sebastian Schreiber\cite{b2}等人提出的DeepDeSRT，它使用 Faster R-CNN 直接对表格进行检测和结构解析，不依赖启发式规则或元数据。后续的Madhav Agarwal\cite{b2}等人提出的CDeC-Net 则在 Mask R-CNN 的基础上增加了多级扩展，并通过可变形卷积适应不同尺度的表格布局，提升了高 IoU 阈值下的检测精度。此外，W Xue\cite{b2}等人提出的ReS2TIM 模型通过构建表格单元间的关系图并进行结构化推断，实现了从表格图像到结构表示的转换；而C Tensmeyer\cite{b2}等人提出的SPLERGE模型则通过扩张卷积建立表格网格布局，进而识别跨行或跨列的复杂单元格，进一步拓展了端到端方法对复杂表格的适应性。
-
-在处理多样化表格格式方面，Y Deng\cite{b2}等人提出的TABLE2LATEX、SS Paliwal\cite{b2}等人提出的TableNet 和 Devashish Prasad\cite{b2}等人提出的CascadeTabNet 的一系列端到端模型表现出了出色的性能。TABLE2LATEX 通过将表格图像与 LaTeX 源代码配对，利用注意力编码器-解码器模型直接生成 LaTeX 格式的结构化输出，这种设计有效地解决了表格识别到格式化表示的转化问题。TableNet 在训练过程中增加了空间语义的关联，使得表格检测和结构识别两项任务之间的依赖关系得到了充分利用，进一步提升了识别精度。CascadeTabNet 则通过单一卷积网络实现区域检测和结构识别的同时处理，简化了整体流程，适合大规模文档的批量处理。
-
-新型端到端模型如Danish Nazir\cite{b2}等人提出的HybridTabNet、Hashmi K.A\cite{b2}等人提出的CasTabDetectoRS 和Wenyuan Xue\cite{b2}等人提出的TGRNet都在表格识别的精度和效率之间进行了平衡。HybridTabNet 采用 ResNeXt-101 主干结合混合任务级联 (HTC) 方法，实现高精度的表格区域检测和结构解析；CasTabDetectoRS 使用轻量级的 ResNet-50 网络，不依赖预处理和后处理即可获得较高的识别效果；TGRNet 将表格结构识别重新定义为表格图重构任务，通过单元格检测和逻辑位置预测的双分支设计，有效解决了复杂表格的解析问题。此外，TSR-dsaw 和 WSTabNet 等模型进一步探讨了端到端识别和输出格式化的结合，通过直接生成 HTML 或 LaTeX 格式的结构化数据，实现了从图像到结构表示的端到端训练。Multi-Task 模型则通过共享的编码器和多个解码器，分别处理表格的结构识别、单元格检测和内容识别等子任务，在多任务学习中展现了独特优势。总体来看，端到端方法为表格识别提供了集成化的解决方案，使得表格区域检测和结构识别可以在统一框架下完成，从而极大提升了识别效率和准确性。
-
-除了模型架构的创新，以数据为中心的方法也为表格识别的研究提供了新的思路。这类方法强调数据质量和标注一致性的重要性，认为高质量的训练数据对模型的性能具有显著影响。以数据为中心的方法通过提升数据的数量和多样性，改进标注质量和一致性，从而增强了模型的泛化能力。例如，通过数据增强技术生成不同类型的表格样本，有助于模型适应各种表格格式和布局；数据的预处理和后处理则能够标准化模型的输入和输出，提高模型的稳定性和一致性。此外，基准对齐确保了数据标注的标准性，使得模型评估结果更具参考价值和可靠性。
-
-在数据驱动的表格识别研究中，大规模高质量的数据集建设成为关键。TABLE2LATEX 项目通过构建包含表格图像和 LaTeX 源代码的配对数据集，为表格识别的端到端训练提供了充足的数据支持。这种高质量、结构化的数据集使得模型能够更好地学习表格的布局和结构特征，有效提升了模型在不同应用场景中的泛化能力和识别精度。整体而言，以数据为中心的方法为端到端表格识别的研究提供了强大的数据支撑，进一步推动了表格识别领域的发展。
-
-综上所述，端到端方法和以数据为中心的方法共同推动了表格识别技术的进步。端到端方法通过整合表格区域检测和结构识别，将表格识别简化为一个单一任务，提升了模型的效率与适应性；以数据为中心的方法则通过优化数据质量和标注一致性，为模型训练提供了坚实的基础。两者的结合，不仅提高了表格识别的准确率，还为应对复杂、多样化的表格数据提供了更加高效和可靠的解决方案。
-
 % \subsection{数据集}
 
 % 表格识别技术的发展离不开高质量数据集的支持，这些数据集为研究者提供了多样化的训练样本，推动了表格识别算法的进步。多个经典数据集为该领域提供了重要的基础。例如，UW-3\cite{data1}（1996年）数据集包含1600张经过倾斜校正的英文文档图像，奠定了表格识别的早期基础；UNLV\cite{data1}（2012年）和Marmot\cite{data1}（2012年）数据集提供了大量扫描文档图像和实体边界框，涵盖了不同类型和布局的表格；ICDAR 2013、ICDAR 2015\cite{data2}和ICDAR 2017\cite{data3}数据集作为表格识别领域的基准数据集，广泛应用于表格检测与结构识别竞赛。随着研究的深入，DeepFigures\cite{data5}（2018年）和ICDAR 2019\cite{data4}（2019年）等数据集相继发布，进一步丰富了表格识别的研究样本，支持表格检测和结构识别任务。PubTabNet\cite{data6}（2020年）和TableBank\cite{data7}（2020年）则为表格检测和结构识别提供了大量HTML格式的表格数据，推动了数据驱动的表格识别技术的发展。SciTSR\cite{data8}（2019年）和FinTab\cite{data9}（2021年）则专注于特定领域，如科学论文和财务表格，提供了多样化的标注数据。此外，WTW\cite{data10}（2021年）数据集专注于自然场景下的表格数据，特别针对图像的扭曲、倾斜等失真问题，提供了形变表格识别的重要数据支持，推动了该领域的进展。最新发布的PubTables-1M\cite{data11}（2022年）和TabRecSet\cite{data12}（2022年）数据集为端到端表格识别提供了大量样本，涵盖了多种语言和表格类型，进一步扩展了表格识别技术的应用范围。WikiTableSet\cite{data13}（2023年）包含近400万张英文、日文和法文表格图像，为跨语言的表格识别研究提供了重要的数据支持。这些数据集的发布为表格识别技术的发展提供了重要的数据支撑，推动了表格识别算法的进步，并为未来的研究提供了宝贵的资源。
@@ -412,31 +219,7 @@ Based on Transformer and CNN\par}
 
 对于存在形变的有网格线表格图像，设计并实现一种基于深度学习的图像分割方法，尽最大可能识别和分割表格中每个单元格的细粒度的坐标，此外，本课题还将设计一种算法，用于确定单元格之间的相对位置，能获取单元格在表格中行、列以及合并信息。
 
-\section{研究的主要内容}
-\subsection{单元格物理坐标定位}
-
-在表格结构识别中，单元格物理坐标用于精确描述单元格在图像中的位置，合适的单元格物理坐标的表示方法为表格结构识别提供了精确的定位基础，尤其是在表格结构重建和数据提取过程中，它们能够确保单元格位置的准确性，也为后续的单元格逻辑坐标定位提供了基础。
-
-\subsection{基于单元格的细粒度分割模型的构建}
-
-传统的表格结构提取方法主要依赖于线段检测和几何模型推理，这些方法虽然在处理标准化表格时表现良好，但在面对形变严重的表格时，其局限性逐渐显现。尤其是直线检测算法，通常通过霍夫变换等技术检测图像中的直线，以识别表格的行和列。尽管这种方法在结构清晰的表格中运作良好，但一旦表格因拍照或扫描产生了形变，行列的线条可能出现弯曲或断裂，从而导致算法无法有效识别，最终影响表格结构的提取精度。于是，有的研究转向通过四个关键角点来表示单元格物理坐标。
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.9\textwidth]{point.png}
-    \caption{关键点检测与图像分割}
-    \label{fig:p}
-\end{figure}
-
-然而，基于关键点推理的模型也存在一定局限性，如图\ref{fig:p}，单元格的边界可能形变过于严重，导致定位出得到的单元格在后期的OCR识别丢失了大量信息，也给逻辑坐标还原带来了巨大的挑战。这种情况下，单纯依靠几何形状的描述已无法满足实际需求，为了解决这些问题，本课题关注基于图像分割的技术。与关键点推理模型的方式不同，图像分割通过对图像进行像素级的处理，能够捕捉到每个单元格的边界信息，并保留更多细节。特别是在处理复杂形状和形变严重的情况下，图像分割算法展现出强大的能力，这种细粒度的识别方法能最大程度上保留单元格的内容信息区域。
-
-\subsection{单元格逻辑坐标定位}
-
-与单元格物理坐标不同，单元格逻辑坐标主要描述单元格之间的相对位置和从属关系，通常用于表示表格的布局结构和单元格之间的逻辑关系。通过获取单元格逻辑坐标，可以更加清楚的了解表格中单元格之间的关系，如单元格本身的行列信息、单元格的合并信息、单元格的跨行跨列信息等。这对于表格结构映射还原具有重要意义。
-
-\subsection{表格结构映射还原}
-
-表格重组是表格识别中的一个辅助步骤，目的是通过物理坐标和逻辑坐标的结合，将表格中的单元格从图像中的位置恢复为规整的、标准化的表格布局。这一过程帮助系统将单元格准确排列，确保不同单元格之间的空间和结构关系正确。
+\subfile{sections/section2-.tex}
 
 \section{研究方案}
 \subsection{数据集的构建}
@@ -522,22 +305,7 @@ Based on Transformer and CNN\par}
 % 参考文献部分
 \clearpage
 \phantomsection % 手动插入锚点
-\section*{参考文献}
 \addcontentsline{toc}{section}{参考文献}
-% \vspace{-3\baselineskip} % 减少段后距离
-% % 设置参考文献的格式
-% \fontsize{10.5pt}{12pt}\selectfont  % 设置五号字体（10.5pt）
-% \renewcommand{\baselinestretch}{1.0}  % 单倍行距
-% \setlength{\bibsep}{0pt} % 设置段前段后间距为0磅
-% \begin{thebibliography}{00}
-%     % ocr + 传统
-%     \bibitem{b1} Shi B, Bai X (2020). A survey on optical character recognition: Techniques, challenges, and applications[J]. International Journal of Computer Science, 28(6), 221-234. 
-%     % OCR技术+ 深度学习
-%     \bibitem{b2} Subramani N, Matton A, Greaves M, and Lam A (2020). A Survey of Deep Learning Approaches for OCR and Document Understanding[R/OL]. ArXiv, abs/2011.13534.
-%     % 传统算法 + 表格结构识别
-%     \bibitem{b3}司明. 表格识别的研究[D]. 西安科技大学, 2009.
-% \end{thebibliography}
-% \bibliographystyle{IEEEtran} % 参考文献排版风格
 \bibliography{ref/ref}
 
 \clearpage
